--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -89,6 +89,48 @@
                                     <action selector="SendTapped:" destination="L7Q-Rz-UWD" eventType="touchUpInside" id="gWd-vG-nCE"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cA8-0s-ae9">
+                                <rect key="frame" x="0.0" y="113" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatCell" rowHeight="140" id="DO8-R0-WRx" customClass="ChatCell" customModule="ParseChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="140"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DO8-R0-WRx" id="jzA-qc-gmb">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="139.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCb-QU-vT3">
+                                                    <rect key="frame" x="23" y="19" width="345" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Message" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSM-Dl-oRy">
+                                                    <rect key="frame" x="23" y="48" width="345" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cSM-Dl-oRy" firstAttribute="leading" secondItem="jzA-qc-gmb" secondAttribute="leadingMargin" constant="8" id="QK6-w5-cHP"/>
+                                                <constraint firstItem="xCb-QU-vT3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jzA-qc-gmb" secondAttribute="trailingMargin" constant="8" id="Wzq-Jt-q7F"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="cSM-Dl-oRy" secondAttribute="bottom" constant="8" id="b5C-vX-J9G"/>
+                                                <constraint firstItem="cSM-Dl-oRy" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jzA-qc-gmb" secondAttribute="trailingMargin" constant="8" id="gpH-Ut-HwB"/>
+                                                <constraint firstItem="cSM-Dl-oRy" firstAttribute="top" secondItem="xCb-QU-vT3" secondAttribute="bottom" constant="8" id="oB6-Tb-7pd"/>
+                                                <constraint firstItem="xCb-QU-vT3" firstAttribute="top" secondItem="jzA-qc-gmb" secondAttribute="topMargin" constant="8" id="uXD-ju-OhJ"/>
+                                                <constraint firstItem="xCb-QU-vT3" firstAttribute="leading" secondItem="jzA-qc-gmb" secondAttribute="leadingMargin" constant="8" id="xWU-43-j02"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageLabel" destination="cSM-Dl-oRy" id="sg0-Pd-azc"/>
+                                            <outlet property="userLabel" destination="xCb-QU-vT3" id="i1z-J8-7Vr"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type a Message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fh4-9x-xEN">
                                 <rect key="frame" x="16" y="75" width="289" height="30"/>
                                 <nil key="textColor"/>
@@ -109,6 +151,7 @@
                     <navigationItem key="navigationItem" title="Chat" id="5rY-Wq-M9F"/>
                     <connections>
                         <outlet property="messageField" destination="Fh4-9x-xEN" id="1kw-HX-nMC"/>
+                        <outlet property="tableView" destination="cA8-0s-ae9" id="83f-iY-kiM"/>
                     </connections>
                 </viewController>
             </objects>
